2010-10-02  Glenn Morris  <rgm@gnu.org>

	* character.c (Fchar_bytes): Remove obsolete function.
	(syms_of_character): Remove Schar_bytes.

	* emacs.c (fatal_error_signal): Also run Fkill_emacs on SIGINT.
	(main) [!WINDOWSNT]: Handle SIGINT with fatal_error_signal
	in batch-mode.
	(Fkill_emacs): Doc fix.  Also run the hook in batch mode.
	(kill-emacs-hook): Doc fix.

2010-10-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* xml.c (Flibxml_parse_xml_region, Flibxml_parse_html_region)
	(parse_region): Reworked to take regions instead of strings, and
	renamed to reflect that these are the libxml functions.

2010-10-01  Eli Zaretskii  <eliz@gnu.org>

	* term.c (init_tty) [DOS_NT]: Don't call Wcm_clear after setting
	screen dimensions in tty->Wcm.

	* xdisp.c (set_cursor_from_row): When the row is truncated and
	point is outside the range of displayed characters, position the
	cursor inside the scroll margin.  (Bug#6349)

2010-10-01  Dan Nicolaescu  <dann@ics.uci.edu>

	Do not include stdlib.h and string.h, config.h does it.
	* xfont.c:
	* w32term.c:
	* w32reg.c:
	* w32inevt.c:
	* w32heap.c:
	* w32console.c:
	* w16select.c:
	* unexsol.c:
	* term.c:
	* sound.c:
	* scroll.c (m):
	* gtkutil.c:
	* font.c:
	* filelock.c:
	* fileio.c:
	* dosfns.c:
	* dbusbind.c:
	* bidi.c:
	* callproc.c:
	* process.c:
	* msdos.c:
	* charset.c: Do not include stdlib.h and string.h, config.h does it.

	* callproc.c (SIGCHLD): Remove conditional definition, syssignal.h defines it.

	* process.c: Move #include <pty.h> earlier.
	(SIGCHLD): Remove conditional definition, syssignal.h defines it.
	(pty_name): Move definition later.

	* nsselect.m (syms_of_nsselect):
	* nsmenu.m (syms_of_nsmenu):
	* nsfns.m (syms_of_nsfns):
	* msdos.c (syms_of_msdos):

	* image.c (syms_of_image):
	* charset.c (syms_of_charset): Use intern_c_string instead of intern.

	* point.h: Remove, unused.

2010-10-01  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in (TAGS, frc, TAGS-LISP, ../nt/TAGS, tags)